--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ a {
 .container-2 { 
     display: flex; 
     flex-direction: column; 
-    background: url("/images/bg2.jpg"); 
+    background: url("https://res.cloudinary.com/dlsaoyrfz/image/upload/v1656702068/my-uploads/bg2_bxag7l.jpg"); 
 }
 
 .container-3 { 
